# BuildMigrator

./: .gitattributes  .gitignore  AUTHORS.md  CLA.md  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: linux.yaml  macos.yaml  upload-release.yaml  windows.yaml  yasm.1.2.0.nupkg
build_migrator/: __init__.py  __main__.py  core.py  helpers.py  modules.py  settings.py
build_migrator/builders/: generic_builder.py
build_migrator/builders/_log_providers/: console.py  strace.py
build_migrator/common/: algorithm.py  argparse_actions.py  argument_parser_ex.py  encoding_detection.py  os_ext.py  path_ext.py  subprocess_ex.py  wildcard_matcher.py  win32.py
build_migrator/generators/: bazel.py  cmake.py
build_migrator/generators/_bazel/: rule_cc.py  skylib.py
build_migrator/generators/_cmake/: cmake_class.py  cmake_cmd.py  cmake_copy.py  cmake_fix_multiple_source_instances_with_different_flags.py  cmake_module.py  cmake_module_copy.py  cmake_move_dependencies_from_source_to_target.py  cmake_variable.py  merge_object_libraries_with_same_arguments.py  remove_redundant_directory_targets.py
build_migrator/generators/_cmake/files/: extensions.cmake
build_migrator/optimizers/: file_target_change_encoding.py  file_target_gsub.py  filter_flags.py  group_common_flags_v2.py  optimizer.py  order_by_dependency.py  pass_sources.py  remove_unused_files_and_directories.py
build_migrator/parsers/: autotools.py  build_log_parser.py  clang_gcc.py  cmake.py  gnu_ar.py  gnu_cp_ln_mv.py  icupkg.py  libtool.py  msbuild.py  msvc_cl.py  msvc_lib.py  msvc_link.py  msvc_mc.py  msvc_ml.py  msvc_rc.py  nasm.py  ninja.py  objcopy.py  pkgdata.py  strace.py  yasm.py
build_migrator/parsers/_common/: command_tokenizer.py  context_working_dir_workaround.py  inline_file_content.py  replace_line.py  response_file.py
build_migrator/parsers/base/: compiler_parser.py  linker_parser.py  parser_base.py
build_migrator/presets/: autotools.json  clang_gcc.json  darwin.json  icu.json  linux.json  msbuild.json  ninja.json  nspr_nss.json  strace.json  windows.json
docs/: Examples.md  UserManual.md  VisualStudioGenerator.md
docs/Examples/boost_with_icu/: 1_build_for_linux.sh  2_parse_for_linux.sh  3_generate_for_linux.sh  CMakeLists.txt
docs/Examples/icu/: CMakeLists_linux.txt  for_linux.sh
docs/Examples/openssl/: CMakeLists_linux.txt  CMakeLists_windows.txt  for_darwin.sh  for_linux.sh  for_windows.bat
merge_cmake/: merge_cmake.py
tests/: base.py  test_algorithm.py  test_argument_parser_ex.py  test_e2e.py  test_merge.py  test_modules.py  test_os_ext.py  test_parse_and_generate.py  test_path_ext.py  test_performance.py  test_settings.py
tests/files/test_copy_dependencies/common/: dependencies.txt
tests/files/test_merge/basic/: CMakeLists.txt
tests/files/test_merge/basic/linux/: CMakeLists.txt
tests/files/test_merge/basic/windows/: CMakeLists.txt
tests/files/test_modules/: ext1.py  ext2.py  ext3.py  ext4.py
tests/files/test_parse_and_generate/bazel_copy_file/: BUILD.bazel
tests/files/test_parse_and_generate/bazel_copy_file/source/: main.c
tests/files/test_parse_and_generate/bazel_copy_file/source/include/: a.h
tests/files/test_parse_and_generate/character_escaping_posix/: CMakeLists.txt
tests/files/test_parse_and_generate/character_escaping_posix_on_windows/: BUILD.bazel  CMakeLists.txt
tests/files/test_parse_and_generate/check_order_of_link_flags/: CMakeLists.txt
tests/files/test_parse_and_generate/clang_install_name/: CMakeLists.txt
tests/files/test_parse_and_generate/clang_multiarch/: CMakeLists.txt
tests/files/test_parse_and_generate/clang_multiarch/source/: test.c
tests/files/test_parse_and_generate/complex_command/: CMakeLists.txt
tests/files/test_parse_and_generate/complex_command/source/: main.cpp
tests/files/test_parse_and_generate/complex_flag_value_gcc_make/: CMakeLists.txt
tests/files/test_parse_and_generate/complex_flag_value_msvc/: CMakeLists.txt
tests/files/test_parse_and_generate/cp_ln_mv/: CMakeLists.txt
tests/files/test_parse_and_generate/darwin/: CMakeLists.txt
tests/files/test_parse_and_generate/darwin/source/: bar.c
tests/files/test_parse_and_generate/darwin_compatibility_version/: CMakeLists.txt
tests/files/test_parse_and_generate/darwin_mm/: CMakeLists.txt
tests/files/test_parse_and_generate/darwin_mm/source/: foo.mm
tests/files/test_parse_and_generate/def_file_generated_during_build/: CMakeLists.txt
tests/files/test_parse_and_generate/dir_mismatch_in_make_log/: CMakeLists.txt  build.log.in
tests/files/test_parse_and_generate/duplicate_flags_gcc/: CMakeLists.txt  build.log.in
tests/files/test_parse_and_generate/duplicate_flags_msvc/: CMakeLists.txt  build.log.in
tests/files/test_parse_and_generate/file_target_change_encoding/: CMakeLists.txt
tests/files/test_parse_and_generate/file_target_change_encoding/files/: utf-16-be.txt
tests/files/test_parse_and_generate/file_target_change_encoding/source/: foo.c  test.h
tests/files/test_parse_and_generate/file_target_change_encoding_and_gsub/: CMakeLists.txt
tests/files/test_parse_and_generate/file_target_gsub/: CMakeLists.txt
tests/files/test_parse_and_generate/file_target_gsub/files/: utf-16-be.txt  utf-8-sig.txt  utf-8.txt
tests/files/test_parse_and_generate/filename_case_windows/: CMakeLists.txt
tests/files/test_parse_and_generate/gcc_ar_extract_objects_from_archive/: CMakeLists.txt  build.log.in
tests/files/test_parse_and_generate/gcc_artifacts_in_subdir/: CMakeLists.txt
tests/files/test_parse_and_generate/gcc_collect_files_for_arch/: CMakeLists.txt
tests/files/test_parse_and_generate/gcc_collect_files_for_arch/source/: test.c
tests/files/test_parse_and_generate/gcc_create_and_link_library_object/: CMakeLists.txt
tests/files/test_parse_and_generate/gcc_exclude_libs/: CMakeLists.txt
tests/files/test_parse_and_generate/gcc_ignore_compile_options_during_linking/: CMakeLists.txt
tests/files/test_settings/: preset1.json  preset2.json
wrappers/: verbose-wrapper-cl.bat  verbose-wrapper-lib.bat  verbose-wrapper-link.bat  verbose-wrapper.bat
(+408 files in other folders)
